[package]
name = "rust_ti"
version = "1.0.2"
edition = "2021"
authors = ["0100101001010000"]
description = "An advanced and configurable Technical Indicators library with over 50 unique indicators"
repository = "https://github.com/0100101001010000/rustTI"
license = "MIT"
keywords  = ["trading", "technical-analysis", "finance", "indicators"]
categories = ["finance", "mathematics"]
exclude = ["/assets", "/.git", "/.github"]
documentation = "https://docs.rs/rust_ti/latest/rust_ti/"

[[example]]
name = "sp500"
path = "examples/main.rs"

[dependencies]
