[package]
name = "rust_ti"
version = "2.1.1"
edition = "2021"
authors = ["0100101001010000"]
description = "A fully configurable technical indicators library with over 70 unique indicators written in pure Rust"
readme = "README.md"
repository = "https://github.com/0100101001010000/rustTI"
homepage = "https://github.com/0100101001010000/rustTI"
license = "MIT"
keywords = [
	"trading", 
	"technical-analysis", 
	"finance", 
	"indicators",
	"rust"
]
categories = ["finance", "mathematics", "science", "algorithms"]
exclude = ["/assets", "/.git", "/.github"]
documentation = "https://docs.rs/rust_ti/latest/rust_ti/"

[badges]
docsrs = { status = "true" }
github-actions = { repository = "0100101001010000/RustTI", workflow = "rust.yml", branch = "main" }

[[example]]
name = "reference"
path = "examples/reference.rs"

[dependencies]
